<resources>
    <string name="app_name">EcoVision</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="loginview">LOGIN</string>
    <string name="login">Login</string>
    <string name="atau">Atau</string>
    <string name="buatakun">Belum Ada Akun?\nDaftar Sekarang</string>
    <string name="registerview">REGISTER</string>
    <string name="register">Register</string>
    <string name="name">Nama</string>
    <string name="sudahakun">Sudah Ada Akun?\nMasuk Sekarang</string>

    <string name="title_menu_1">Selamat Datang di ecoVision</string>
    <string name="title_menu_2">Deteksi Sampah Plastik</string>
    <string name="title_menu_3">Tetap Terinformasi</string>
    <string name="title_menu_4">Bergabung Sekarang</string>
    <string name="desc_menu_1">Temukan kekuatan AI dalam mengidentifikasi dan mengategorikan sampah plastik dengan mudah.</string>
    <string name="desc_menu_2">Ambil atau unggah gambar sampah plastik, dan model AI kami akan mengidentifikasi jenis plastik, membantu Anda mendaur ulang dengan benar.</string>
    <string name="desc_menu_3">Akses artikel informatif tentang berbagai jenis plastik, dampaknya terhadap lingkungan, dan praktik terbaik untuk daur ulang.</string>
    <string name="desc_menu_4">Bergabunglah dengan ecoVision. Bersama kita buat perbedaan!</string>
    <string name="start_now">Mulai Sekarang</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="plastic_image">plastic image</string>
    <string name="recycling_symbol">recycling symbol</string>
    <string name="plastic_type">Jenis Plastik</string>
    <string name="plastic_description">Deskripsi Plastik</string>
    <string name="recycling_tips">Cara Daur Ulang</string>
    <string name="recycling_tips_desc">Proses daur ulang plastik.</string>
    <string name="env_effect">Bahaya bagi Lingkungan</string>
    <string name="env_effect_desc">Dampak lingkungan dari plastik.</string>
    <string name="example_image">Contoh Benda</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="change_picture">Change Picture</string>
    <string name="full_name">Nama lengkap</string>
    <string name="dob">Tanggal lahir</string>
    <string name="select_date">Select Date</string>
    <string name="domicile">Domisili</string>
    <string name="save">Save</string>
    <string name="scan_button">Scan button for detecting plastic</string>
    <string name="learn_more">Pelajari lebih lanjut</string>
    <string name="maps_button">Lihat lokasi daur ulang</string>
    <string name="probability">85%</string>
    <string name="plastic_waste_type">Jenis limbah plastik</string>
    <string name="plastic_waste">Other</string>
    <string name="scan_result">Hasil Scan</string>
    <string name="image_scan">Image of scanned object</string>
    <string name="splash_image">splash image of ecovision</string>
    <string name="learn_title">Pelajari jenis-jenis plastik sebelum kamu daur ulang</string>
    <string name="scan_to_add_history">Mulai scan untuk\n menambahkan history</string>
    <string name="hello_home">Halo, \nRudytabootie</string>
    <string name="go_to_guide">Go to guide page</string>
    <string name="amount_scanned">Total kamu sudah %1$d kali melakukan pemindaian sampah plastik! Mantap!</string>
    <string name="no_scans_yet">Kamu belum nyoba fiturnya nih, ayo mulai pemindaian pertamamu!</string>
    <string name="tips_of_the_day">Tips of the day</string>
    <string name="tips_description">Hindari penggunaan plastik sekali pakai untuk menjaga lingkungan.</string>
    <string name="history_preview_home">Sampah plastik yang terakhir kamu pindai</string>
    <string name="upload">Upload</string>
    <string name="gpu">GPU</string>
    <string name="back_home">Balik ke Home</string>
    <string name="welcome_sign">Halo,\n%1$s</string>
    <string name="scan_again">Scan lagi</string>
    <string name="scan_again_desc">Scan the plastic again</string>
    <string name="date">17 Juni 2024</string>
</resources>